Import of TOKUHIROM/mRuby-0.02.tar.gz from CPAN.
gitpan-cpan-distribution: mRuby
gitpan-cpan-version:      0.02
gitpan-cpan-path:         TOKUHIROM/mRuby-0.02.tar.gz
gitpan-cpan-author:       TOKUHIROM
gitpan-cpan-maturity:     released

--- a/META.yml
+++ b/META.yml
@@ -1,5 +1,5 @@
 ---
-abstract: 'A module for you'
+abstract: 'mruby binding for perl5.'
 author:
   - 'Tokuhiro Matsuno E<lt>tokuhirom AAJKLFJEF@ GMAIL COME<gt>'
 build_requires:
@@ -23,9 +23,9 @@ no_index:
 provides:
   mRuby:
     file: lib/mRuby.pm
-    version: 0.01
+    version: 0.02
 requires:
   parent: 0
 resources:
   license: http://dev.perl.org/licenses/
-version: 0.01
+version: 0.02
